--- a/style.css
+++ b/style.css
@@ -1,17 +1,30 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    scroll-behavior: smooth;
+}
+
 body{
-    font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(#383737, #141414,#000000);
+    font-family: 'Raleway', sans-serif;
+    background: linear-gradient(#535353, #141414,#000000);
 }
 
 nav{
     position: absolute;
-    width: 940px;
     margin: 0 auto;
+    display: flex;
+    justify-content: end;
+    width: 100%;
 }
+
+
 
 nav li{
     display: inline;
-    margin: 0 0 0 15px;
+    font-weight: 600;
+    padding-right: 10px;
+
 }
 
 nav a{
@@ -22,7 +35,7 @@ nav a{
 }
 .banner{
     width: 100%;
-    height: 500px; 
+    height: 80%; 
     background-color: #ccc; 
     display: flex;
     align-items: center;
@@ -51,10 +64,19 @@ nav a{
     color: #ccc;
 }
 
+.conteudo-sobre{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .rosi{
     width: 120px;
     float: left;
     margin: 0 20px 0 20px;
+    border-radius: 32%;
+    margin-top: 1rem;
 }
 
 .sobre-mim{
@@ -62,13 +84,28 @@ nav a{
     font-size: 17px;
     margin: 2em 0 0;
     color: #ccc;
+    width: 50%;
+    font-weight: 500;
+}
+
+.carreira{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.linguagens{
+    text-align: center;
+    font-size: 30px;
+    color: #ccc;
+    margin: 4em 0 1em;
 }
 
 .ferramentas{
     text-align: center;
     font-size: 20px;
     color: #ccc;
-    margin: 3em 0 3em;
+    margin: 6em 0 3em;
 }
 
 .figuras{
@@ -76,19 +113,30 @@ nav a{
     font-size: 100px;
 }
 
+.figuras img{
+    width: 70px;
+
+}
+
 .tragetoria{
     text-align: center;
     font-size: 30px;
     color: #ccc;
-    margin: 2em 0 0;
+    margin: 2em 0 2em;
 }
 
-.formação{
-    display: flex;
+.formacao{
+    display: inline;
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-start;
     padding: 16px;
     gap: 8px;
 
+}
+
+.formacao img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
 }
