--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 body{
     font-family: 'Raleway', sans-serif;
     background: linear-gradient(#535353, #141414,#000000);
+    color: white;
 }
 
 nav{
@@ -18,8 +19,6 @@ nav{
     width: 100%;
 }
 
-
-
 nav li{
     display: inline;
     font-weight: 600;
@@ -29,24 +28,28 @@ nav li{
 
 nav a{
     text-transform: uppercase;
-    color: #ccc;
+    color: white;
     font-size: 15px;
     text-decoration: none;
 }
+
 .banner{
     width: 100%;
     height: 80%; 
-    background-color: #ccc; 
+    background-color: white; 
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .banner h1{
-    color: #ccc;
+    color: white;
     font-size: 40px;
     margin: 6em 0 0;
     line-height: 1.35;
+    white-space: nowrap;
+    overflow: hidden;
+    text-align: center;
 }
 
 .titulo{
@@ -56,12 +59,35 @@ nav a{
     line-height: 1.35;
 }
 
+.typing{
+    animation: blinkCursor 500ms steps(40) infinite normal,
+               typing 4s steps(40) 1s normal both;
+}
+
+@keyframes typing{
+    from{
+        width: 0;
+    }
+    to{
+        width: 17em;
+    }
+}
+
+@keyframes blinkCursor{
+    from{
+        border-radius-color: white;
+    }
+    to{
+        border-radius-color: transparent;
+    }
+}
+
 .titulo-principal{
     text-align: center;
     font-size: 40px;
     margin: 2em 0 0;
     clear: left;
-    color: #ccc;
+    color: white;
 }
 
 .conteudo-sobre{
@@ -83,7 +109,7 @@ nav a{
     text-align: center;
     font-size: 17px;
     margin: 2em 0 0;
-    color: #ccc;
+    color: white;
     width: 50%;
     font-weight: 500;
 }
@@ -97,15 +123,16 @@ nav a{
 .linguagens{
     text-align: center;
     font-size: 30px;
-    color: #ccc;
+    color: white;
     margin: 4em 0 1em;
 }
 
 .ferramentas{
     text-align: center;
     font-size: 20px;
-    color: #ccc;
-    margin: 6em 0 3em;
+    color: white;
+    margin: 6em 8rem 3em;
+    border-radius: 30%;
 }
 
 .figuras{
@@ -121,7 +148,7 @@ nav a{
 .tragetoria{
     text-align: center;
     font-size: 30px;
-    color: #ccc;
+    color: white;
     margin: 2em 0 2em;
 }
 
@@ -132,11 +159,16 @@ nav a{
     align-items: flex-start;
     padding: 16px;
     gap: 8px;
-
 }
 
 .formacao img {
     width: 150px;
     height: 150px;
     border-radius: 50%;
+}
+
+.estudos {
+    display: flex;
+    justify-content: center;
+    align-items: start;
 }
