--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ nav a{
     display:flex;
     flex-direction: column;
     align-items: center;
+    margin: 0 0 5em;
 }
 
 .linguagens{
@@ -126,22 +127,117 @@ nav a{
     color: white;
     margin: 4em 0 1em;
 }
+.skills{
+	width: 500px;
+	margin: 60px auto;
+	color: #fff;
+    text-align: center;
+}
 
+.skills li{
+	margin: 20px 0;
+}
+
+.bar{
+	background-color: #353b48;
+	display: block;
+	height: 2px;
+	border: 1px solid rgba(0,0,0,0.3);
+	border-radius: 3px;
+	overflow: hidden;
+	box-shadow: 0 0 10px #2187e7b3;
+}
+
+.bar span{ 
+	height: 2px;
+	float: left;
+	background-color: #2187e7;
+}
+
+.html{ 
+	width: 80%;
+	animation: html 2s;
+}
+
+.css{
+	width: 70%;
+	animation: css 2s;
+}
+
+.javascript{ 
+	width: 50%;
+	animation: javascript 2s;
+}
+
+.mysql{ 
+	width: 50%;
+	animation: mysql 2s;
+}
+
+.php{
+    width: 30%;
+	animation: mysql 2s;
+}
+
+
+@keyframes html{ 
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 80%;
+	}
+}
+
+@keyframes css{ 
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 93%;
+	}
+}
+
+@keyframes javascript{ 
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 50%;
+	}
+}
+
+@keyframes jquery{
+	0%{
+		width: 0%;
+	}
+
+	100%{
+		width: 30%;
+	}
+}
 .ferramentas{
     text-align: center;
     font-size: 20px;
     color: white;
-    margin: 6em 8rem 3em;
+    margin: 3em 1rem 3em;
     border-radius: 30%;
 }
 
 .figuras{
     align-items: center;
     font-size: 100px;
+    
 }
 
 .figuras img{
     width: 70px;
+    height: 50px;
+    border-radius: 50%;
+    box-shadow: 5px 5px 4px  #2187e7b3;
 
 }
 
@@ -149,7 +245,7 @@ nav a{
     text-align: center;
     font-size: 30px;
     color: white;
-    margin: 2em 0 2em;
+    margin: 2em 0 1em;
 }
 
 .formacao{
@@ -171,4 +267,73 @@ nav a{
     display: flex;
     justify-content: center;
     align-items: start;
+}
+
+.trabalhos{
+    padding: 3em 0em;
+    width: 940px;
+    margin: 0 auto; 
+}
+
+.trabalhos img{
+    float: right;
+    width: 40%;
+    height: 40%;
+    margin: 0 20px 0 0 ;
+    opacity: 1;
+    transition: 500ms;
+    box-shadow: 7px 7px 7px  #2187e7b3;
+}
+
+.trabalhos img{
+    opacity: 0.8;
+    border-radius: 10px;
+    box-sizing: border-box;
+    border: 7px outset rgb(17, 16, 16);
+}
+
+.trabalhos h2{
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 2em;
+    clear: left;
+}
+
+.trabalhos p{
+    margin: 0 0 1em;
+}
+
+.certificacao{
+    text-align: center;
+    color: white;
+    margin: 3em 1rem 10em;
+}  
+
+footer{
+    text-align: center;
+     padding: 40px 0;
+}
+
+@media screen and (max-width:769px) {
+    .banner, .sobre, .skills, .ferramentas, .carreiras, .estudos, .projetos, 
+    .carreira, .certicacao, .trajetoria, .contatos {
+        width: 100%;
+    }
+
+    h1{
+        text-align: center;
+    }
+
+    nav{
+        position: static;
+    }
+
+    p{
+        text-align: cent;
+    }
+
+    .trabalhos img{
+        width: 380px;
+    }
+
 }
