--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav{
 
 nav li{
     display: inline;
-    font-weight: 600;
+    font-weight: 600px;
     padding-right: 10px;
 
 }
@@ -62,6 +62,10 @@ nav a{
 .typing{
     animation: blinkCursor 500ms steps(40) infinite normal,
                typing 4s steps(40) 1s normal both;
+}
+
+li{
+    list-style: none;
 }
 
 @keyframes typing{
@@ -273,6 +277,14 @@ nav a{
     padding: 3em 0em;
     width: 940px;
     margin: 0 auto; 
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+.trabalhos-conteudo{
+    display: flex;
+    align-items: center;
+    margin-bottom: 2rem;
 }
 
 .trabalhos img{
@@ -283,6 +295,10 @@ nav a{
     opacity: 1;
     transition: 500ms;
     box-shadow: 7px 7px 7px  #2187e7b3;
+}
+
+#projetos h2{
+    text-align: center;
 }
 
 .trabalhos img{
@@ -315,25 +331,45 @@ footer{
 }
 
 @media screen and (max-width:769px) {
-    .banner, .sobre, .skills, .ferramentas, .carreiras, .estudos, .projetos, 
+    .banner, .sobre, .skills, .ferramentas, .carreiras, .estudos, .projetos, .trabalhos,
     .carreira, .certicacao, .trajetoria, .contatos {
         width: 100%;
+    }
+
+    .banner{
+        display: flex;
     }
 
     h1{
         text-align: center;
     }
 
-    nav{
-        position: static;
-    }
-
     p{
         text-align: cent;
     }
 
-    .trabalhos img{
-        width: 380px;
+    .banner h1{
+        font-size: 20px;
+        margin: 1em 0 0;
     }
 
+    .sobre-mim{
+        width: 90%;
+    }
+
+    .trabalhos img{
+        width: 380px;
+        padding-bottom: 20px;
+        margin-left: 15px;
+    }
+    .trabalhos p{
+        margin: 1em;
+    }
+
+    .trabalhos-conteudo{
+        flex-direction: column;
+    }
+    h3{
+        text-align: center;
+    }
 }
